--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -14,6 +14,7 @@
       </li>
       {{ end -}}
       
+      <!-- adapted search functionality from https://decovar.dev/blog/2020/01/05/hugo-search/ -->
       <li class="nav-item" style="list-style: none; margin-left: auto;">
           <input id="search-query" placeholder="Search" oninput="performSearch(this.value)" />
       </li>
