--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,11 +1,12 @@
 <nav class="global-nav">
-  <ul class="nav-list" style="display: flex; justify-content: space-between; width: 100%; padding: 0; margin: 0; position: relative;">
+  <ul class="nav-list"
+    style="display: flex; justify-content: space-between; width: 100%; padding: 0; margin: 0; position: relative;">
     {{- $currentPage := . -}}
 
     {{- range .Site.Menus.main }}
     <li class="nav-item" style="list-style: none;">
       <a href="{{ .URL }}" class="nav-link
-             {{- if or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) }} active"
+             {{- if or ($currentPage.IsMenuCurrent " main" .) ($currentPage.HasMenuCurrent "main" .) }} active"
         aria-current="true" {{- else -}} " {{- end -}}>
               {{- .Pre }}
               {{ .Title }}
@@ -14,17 +15,26 @@
       </li>
       {{ end -}}
       
-      <!-- adapted search functionality from https://decovar.dev/blog/2020/01/05/hugo-search/ -->
+      <!-- Search input with label -->
       <li class="nav-item" style="list-style: none; margin-left: auto;">
-          <input id="search-query" placeholder="Search" oninput="performSearch(this.value)" />
+        <label for="search-query" class="sr-only">Search the site</label>
+        <input id="search-query" placeholder="Search" oninput="performSearch(this.value)"
+          aria-describedby="search-results" aria-label="Search field" />
       </li>
-      
-      <div id="search-results" style="background-color: black; color: white; position: absolute; top: 100%; right: 0; width: fit-content; z-index: 9999; padding: 10px; border-radius: 5px; display: none; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5); outline: 1px solid white;">
-        <ul style="list-style: none; margin: 0; padding: 0; text-align: right;">
-        </ul>
-      </div>
 
-    </ul>
+      <!-- Search results section, improved for screen readers -->
+      <section id="search-results" 
+               aria-live="assertive" 
+               aria-relevant="additions removals" 
+               role="region"
+               aria-labelledby="search-results-title"
+               style="background-color: black; color: white; position: absolute; top: 100%; right: 0; width: fit-content; z-index: 9999; padding: 10px; border-radius: 5px; display: none; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5); outline: 1px solid white;">
+        <h2 id="search-results-title" class="sr-only">Search Results</h2> <!-- Hidden heading for screen readers -->
+        <ul style="list-style: none; margin: 0; padding: 0; text-align: right;">
+          <!-- Search result items will be dynamically inserted here -->
+        </ul>
+      </section>
+  </ul>
 </nav>
 
 <script defer src="/js/search.js"></script>
